package org.dsu.multiplegames.exampleinterface.mathoperations.substract;

public interface Substractor {
    int getIntSubstract();
}
